Fixed some layout issues with applications and added chronicles and css-styles

--- a/public/stylesheets/text.css
+++ b/public/stylesheets/text.css
@@ -65,3 +65,22 @@ li {
 	margin-left: 30px;
 }
 
+/* IT ER KUL */
+div.boks {
+  padding: 5px;
+  color: white;
+}
+div.boks h1 {
+  color: white;
+}
+div.boks h4 {
+  font-style: italic;
+  font-size: 10px;
+}
+div.boks p {
+  padding: 5px;
+}
+div.boks p.ingress {
+}
+div.boks p.body {
+  font-style: italic;
